# RayTracing

./: README.md
binaries/models/: plane.stl  room.stl
binaries/shaders/: addShader.fs  shader.fs
source/: BMPParser.h  BufferLoader.cpp  BufferLoader.h  CMakeLists.txt  ComputeShader.cpp  ComputeShader.h  FrameBuffer.cpp  FrameBuffer.h  Input.cpp  Input.h  Maths.cpp  Maths.h  ModelLoader.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Source.cpp  TestScene.cpp  TestScene.h  Texture.cpp  Texture.h  Window.cpp  Window.h
source/models/: cone.stl  monkey.stl  room0.stl  sphere.stl  untitled.stl
source/shaders/: addShader.vs  compute.cs
